--- a/2a_notebook.ipynb
+++ b/2a_notebook.ipynb
@@ -322,16 +322,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f43f13ef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TreeNode(-, children=2)\n",
+      "TreeNode(F, children=0)\n",
+      "TreeNode(G, children=0)\n",
+      "TreeNode(*, children=2)\n",
+      "TreeNode(W, children=0)\n"
+     ]
+    }
+   ],
    "source": [
     "config = read_config('configs/2a/green_config.txt', globals(), locals())\n",
     "for depth in [1, 2, 3, 4, 5]:\n",
-    "    # Instantiate a tree with your grow method using the given depth.\n",
-    "    tree = None\n",
-    "\n",
+    "    tree = TreeGenotype.generate_grow_tree(\n",
+    "        depth_limit=depth,\n",
+    "        terminals=config['pac_init']['terminals'],\n",
+    "        nonterminals=config['pac_init']['nonterminals']\n",
+    "    )\n",
+    "    print(tree.root)\n",
     "del config, tree"
    ]
   },
