--- a/2a_notebook.ipynb
+++ b/2a_notebook.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "markdown",
    "id": "b274c70a",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "# Assignment 2a Notebook: Automated Design of AI Agents with Random Search\n",
     "Assignment Series 2 uses a variant of Pac-Man, which we call GPac, where the goal is to produce AI agents to play GPac. Assignment 2a (this assignment) will cover the design of AI Pac-Man agents with random search, Assignment 2b will cover the design of AI Pac-Man agents with genetic programming (GP), and Assignment 2c will cover the competitive co-evolution of AI Pac-Man and ghost agents playing against each other.\n",
@@ -21,7 +25,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "d5b80481",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -84,7 +94,11 @@
   {
    "cell_type": "markdown",
    "id": "330fef65",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "## GPac\n",
     "In this assignment series, we'll be playing GPac: a game inspired by Pac-Man but using simplified mechanics. To make this assignment more about your ability to understand and implement search algorithms, not your ability to implement a video game, we're providing you with an implementation of GPac. We will now go over the rules of the game in detail; this should be easy to understand if you're familiar with any version of Pac-Man.\n",
@@ -117,7 +131,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "22f35a12",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -145,7 +163,11 @@
   {
    "cell_type": "markdown",
    "id": "d8edfa13-1235-4888-8602-393d34365bb6",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "Running the previous cell should have made an `example_game.txt` file in your repository. You can upload this file to [the online visualizer](http://bonsai.auburn.edu/dtauritz/courses/ec/intro/2020fall/visualizer.html) to watch the full game. As these agents made completely random decisions, the gameplay is probably unimpressive, but this may give you a better idea of how the game works.\n",
     "\n",
@@ -156,7 +178,13 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "f309d4ae-990c-4693-be9c-4a77f040d711",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -190,7 +218,11 @@
    },
    "cell_type": "markdown",
    "id": "45e2e060",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "## Problem Formulation\n",
     "Now that you've seen a game played by an agent that makes random actions, let's talk about how more intelligent AI agents will work in GPac. When an agent makes a move in GPac, it knows the outcome of its action. The agent doesn't necessarily know what actions its opponent(s) will make during the same turn, but we'll ignore that in this assignment series and consider only the outcome of an agent's immediate actions. That is, our agents will assume (incorrectly) that the other agents will stay where they are.\n",
@@ -268,7 +300,11 @@
   {
    "cell_type": "markdown",
    "id": "2ca435e3",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "### The Full Method for Tree Initialization\n",
     "Assume we have a set of nonterminal primitives $F$, a set of terminal input primitives $T$, and an initial depth limit $D_{max}$. In the full method, **every branch of the tree has depth $D_{max}$**. That is, nodes at depth $d$ are chosen from $F$ if $d<D_{max}$ or from $T$ if $d=D_{max}$ [1]. Depth is calculated as the distance from the root, so the root has depth 0, its children have depth 1, their children have depth 2, etc.\n",
@@ -284,7 +320,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "3877fdb6",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "config = read_config('configs/2a/green_config.txt', globals(), locals())\n",
@@ -301,14 +341,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "94b409ba-b523-4472-85cf-359faa5b8b0f",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "id": "1bfc450e",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "### The Grow Method for Tree Initialization\n",
     "Like the full method, assume we have a set of nonterminal primitives $F$, a set of terminal primitives $T$, and an initial depth limit $D_{max}$. In the grow method, however, nodes at depth $d$ are chosen from $F \\cup T$ if $d<D_{max}$ or from $T$ if $d=D_{max}$ [1].\n",
@@ -324,7 +372,13 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "f43f13ef",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -367,11 +421,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "ff287ad8",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from tree_genotype import *\n",
+    "\n",
     "config = read_config('configs/2a/green_config.txt', globals(), locals())\n",
     "mu = 500\n",
     "example_population = TreeGenotype.initialization(mu, **config['pac_init'])\n",
