--- a/2a_notebook.ipynb
+++ b/2a_notebook.ipynb
@@ -735,10 +735,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "9b72743a-570c-4775-a9a5-87f4c29c54c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tree 0 was deserialized correctly!\n",
+      "Tree 1 was deserialized correctly!\n",
+      "Tree 2 was deserialized correctly!\n",
+      "Tree 3 was deserialized correctly!\n",
+      "Tree 4 was deserialized correctly!\n"
+     ]
+    }
+   ],
    "source": [
     "config = read_config('configs/2a/green_config.txt', globals(), locals())\n",
     "config['pac_init']['depth_limit'] = 3\n",
