--- a/2a_notebook.ipynb
+++ b/2a_notebook.ipynb
@@ -473,7 +473,13 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "a18d5459",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -589,7 +595,11 @@
   {
    "cell_type": "markdown",
    "id": "0b07d46a",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "### Automated Tree Assessment\n",
     "Now that you've done some light manual testing, let's perform some automated testing at scale using a tool that examines trees from files. Execute the following cell to generate 100 trees that will be subjected to automated assessment. Note that this only checks for valid structure and printing, and doesn't necessarily guarantee that your tree generation or execution are entirely correct."
@@ -599,7 +609,13 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "ab6f4b20",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -725,7 +741,11 @@
   {
    "cell_type": "markdown",
    "id": "b6eab5b0-5cf4-44d3-ae38-74d82d2bfc2b",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "### Deserialization\n",
     "With your serialization working correctly (hopefully), you can begin working on deserialization in the `TreeGenotype.deserialize` method. We have provided a lot of the logic of this method for you, parsing the string in order to determine where nodes belong in the deserialized tree, and your only job is to create the individual nodes and piece them together into your chosen data structure.\n",
@@ -737,7 +757,13 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "9b72743a-570c-4775-a9a5-87f4c29c54c3",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -778,7 +804,11 @@
   {
    "cell_type": "markdown",
    "id": "41356d95",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "## Fitness Evaluation\n",
     "In this assignment, we're leaving part of the fitness function for you to implement as you need to interface your custom tree genotype implementation. In Assignment 2c, we'll be performing competitive co-evolution with multiple controllers. For assignments 2a and 2b though, your Pac-Man agents will play against ghost agents that select random moves.\n",
@@ -791,7 +821,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b08baddf",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "from gpac import GPacGame\n",
@@ -826,7 +860,11 @@
   {
    "cell_type": "markdown",
    "id": "54f55f8b",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "**Notes**:\n",
     "* The above cell prints the walls using `#` and `~`, to make the map easier to read. In the code, however, walls are represented with `True` or `False`, with `walls[x][y]` being `True` if there is a wall in cell `(x, y)`, or `False` if there is not.\n",
@@ -849,15 +887,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "c0e86b0b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pac-Man's score was 2.3255813953488373, and the game log was written to test_game.txt\n"
+     ]
+    }
+   ],
    "source": [
     "config = read_config('configs/2a/green_config.txt', globals(), locals())\n",
     "\n",
+    "from tree_genotype import TreeGenotype\n",
+    "from fitness import play_GPac\n",
+    "\n",
+    "# Assume `config` has already been loaded from green_config.txt\n",
+    "controller = TreeGenotype()\n",
+    "controller.genes = TreeGenotype.generate_full_tree(\n",
+    "    depth_limit=config['pac_init']['depth_limit'],\n",
+    "    terminals=config['pac_init']['terminals'],\n",
+    "    nonterminals=config['pac_init']['nonterminals']\n",
+    ")\n",
+    "\n",
     "# Assign your controller to this variable.\n",
-    "pac_controller = None\n",
+    "pac_controller = controller\n",
     "\n",
     "# You should use a similar function call in your search algorithm code.\n",
     "score, log = play_GPac(pac_controller, **config['game'])\n",
