hill climber data

--- a/2a_notebook.ipynb
+++ b/2a_notebook.ipynb
@@ -1714,8 +1714,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "id": "94b34930",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = read_config('configs/2a/red2_config.txt', globals(), locals())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "acd31962-232f-4131-ba41-0309329bea2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best score: 145.27131782945736\n",
+      "Serialized controller:\n",
+      "/\n",
+      "|+\n",
+      "||*\n",
+      "|||*\n",
+      "||||F\n",
+      "||||-0.1871711459330614\n",
+      "|||+\n",
+      "||||P\n",
+      "||||4.524766107526059\n",
+      "||RAND\n",
+      "|||RAND\n",
+      "||||-4.652212729742482\n",
+      "||||F\n",
+      "|||RAND\n",
+      "||||+\n",
+      "|||||/\n",
+      "||||||/\n",
+      "|||||||W\n",
+      "|||||||F\n",
+      "||||||RAND\n",
+      "|||||||4.532580769813338\n",
+      "|||||||-4.4640357718563255\n",
+      "|||||/\n",
+      "||||||RAND\n",
+      "|||||||W\n",
+      "|||||||P\n",
+      "||||||-\n",
+      "|||||||F\n",
+      "|||||||P\n",
+      "||||-\n",
+      "|||||RAND\n",
+      "||||||+\n",
+      "|||||||W\n",
+      "|||||||P\n",
+      "||||||-\n",
+      "|||||||W\n",
+      "|||||||F\n",
+      "|||||RAND\n",
+      "||||||RAND\n",
+      "|||||||W\n",
+      "|||||||W\n",
+      "||||||*\n",
+      "|||||||W\n",
+      "|||||||W\n",
+      "|G\n"
+     ]
+    }
+   ],
+   "source": [
+    "from hill_climber import hill_climb_run\n",
+    "\n",
+    "result = hill_climb_run(10_000, config)\n",
+    "print('Best score:', result.best_score)\n",
+    "print('Serialized controller:')\n",
+    "print(result.best_solution.serialize())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "d4f2a0cc-9f94-41dd-a9fc-bde16fae093b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to data/2a/hill_climber\n"
+     ]
+    }
+   ],
+   "source": [
+    "from hill_climber import hill_climb_experiment\n",
+    "\n",
+    "(\n",
+    "    best_per_run,\n",
+    "    best_solution,\n",
+    "    best_log,\n",
+    "    stairstep_data,\n",
+    "    hist,\n",
+    ") = hill_climb_experiment(10, 10_000, config)\n",
+    "\n",
+    "save_data(\n",
+    "    best_per_run,\n",
+    "    best_solution,\n",
+    "    best_log,\n",
+    "    stairstep_data,\n",
+    "    hist,\n",
+    "    Path('./data/2a/hill_climber/'),\n",
+    "    config,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "d69d8cdc-2c95-4844-b897-88a8412fc077",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean best score across runs: 142.05\n",
+      "Standard deviation of best scores: 8.04\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TODO: Calculate mean and standard deviation of your best score from each run here\n",
+    "best_score_mean = statistics.mean(best_per_run)\n",
+    "best_score_std = statistics.stdev(best_per_run)\n",
+    "\n",
+    "print(f\"Mean best score across runs: {best_score_mean:.2f}\")\n",
+    "print(f\"Standard deviation of best scores: {best_score_std:.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f383e67e-98cd-4152-b500-14c6d48a3c9e",
    "metadata": {},
    "outputs": [],
    "source": []
