--- a/2a_notebook.ipynb
+++ b/2a_notebook.ipynb
@@ -1685,23 +1685,16 @@
     "    ghost_best_log,\n",
     "    ghost_stairstep_data,\n",
     "    ghost_hist,\n",
-    ") = ghost_random_search_experiment(num_runs, num_evaluations, red1_config)\n",
-    "\n",
-    "save_ghost_data(\n",
-    "    ghost_best_per_run,\n",
-    "    ghost_best_solution,\n",
-    "    ghost_best_log,\n",
-    "    ghost_stairstep_data,\n",
-    "    ghost_hist,\n",
-    "    Path('./data/2a/red1/'),\n",
-    ")\n",
-    "\n",
-    "fig = ghost_hist.get_plot(\n",
-    "    f'Distribution of Ghost Scores over {num_runs} Runs of Random Search'\n",
-    ")\n",
-    "fig.savefig('data/2a/red1/histogram.png')\n",
-    "fig.show()"
+    ") = ghost_random_search_experiment(num_runs, num_evaluations, red1_config)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ba37100-886a-4540-9e26-ccd22f98ea53",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1849,6 +1842,40 @@
     "\n",
     "print(f\"Mean best score across runs: {best_score_mean:.2f}\")\n",
     "print(f\"Standard deviation of best scores: {best_score_std:.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "6629b2e0-4b31-4086-8106-b2db0b5193cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "67ac4bb5ab6942b8b3511f2c7c9711f4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(outputs=({'output_type': 'display_data', 'data': {'text/plain': '<IPython.core.display.HTML object>', '…"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "animation = render_game(best_log)\n",
+    "\n",
+    "with open('data/2a/hill_climber/visualization.html', 'w') as f:\n",
+    "    f.write(animation)\n",
+    "\n",
+    "out = Output()\n",
+    "out.append_display_data(HTML(animation))\n",
+    "del animation\n",
+    "out"
    ]
   },
   {
